--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaApplication3
 excludes=
 file.reference.commons-lang3-3.11.jar=../Documents/commons-io-2.8.0/commons-lang3-3.11.jar
+file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\truon\\Desktop\\M\u00e1y t\u00ednh\\Documents\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49-bin.jar
+file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\truon\\Desktop\\M\u00e1y t\u00ednh\\Documents\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-lang3-3.11.jar}
+    ${file.reference.commons-lang3-3.11.jar}:\
+    ${file.reference.mysql-connector-java-5.1.49.jar}:\
+    ${file.reference.mysql-connector-java-5.1.49-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
